--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br" ng-app="projeto">
-    <head>
-        <base href="/">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-        <title>Cinelura</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <style>
-            .my-panel-repeat {
-              -webkit-transition:transform 0.8s;
-              transition:transform 0.8s;
-            }
-             
-            .my-panel-repeat.ng-leave-active{
-              transform: scale(0.1);
-            } 
-        </style>
-        <script src="js/lib/angular.min.js"></script>
-        <script src="js/lib/angular-resource.min.js"></script>
-        <script src="js/lib/angular-animate.min.js"></script>
-        <script src="js/lib/angular-route.min.js"></script>
-        <script src="js/lib/angular-cookies.min.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/controllers/principal-controller.js"></script>
-        <script src="js/controllers/foto-controller.js"></script>
-        <script src="js/controllers/grupo-controller.js"></script>
-        <script src="js/services/foto-service.js"></script>
-        <script src="js/directives/my-panel.js"></script>
-        <script src="js/directives/my-picture.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            <ng-view></ng-view>
-        </div> <!-- fim container -->        
-    </body>
+<!-- ng-app declara o modulo que será utilizado na página -->
+<!-- O script ainda assim precisa ser importado -->
+<html lang="pt-br" ng-app="alurapic">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <!-- Para usar a history API -->
+    <base href="/">
+    <title>Alurapic</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/efeitos.css">
+    <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-animate.min.js"></script>
+    <script src="js/lib/angular-route.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/controllers/fotos-controller.js"></script>
+    <script src="js/directives/minhas-diretivas.js"></script>
+</head>
+<!-- informa qual parte da pargina será utilizado por esse controller -->
+<!-- Nesse caso todo o body -->
+<!-- <body ng-controller="FotosController"> -->
+<!-- Utilizando o ng-view o controller passa a ser injetado pelo routeProvider /ver - main.js-->
+<body>
+    <div class="container">
+        <!-- Criando lacuna para inserção de arquivos dinamicamente -->
+        <ng-view></ng-view>
+    </div><!-- fim container -->
+</body>
+
 </html>
